--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -40,4 +40,5 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "alp"}
 kotlin-kapt = {id = "org.jetbrains.kotlin.kapt", version.ref = "kapt"}
-win7calc-main-gradle-plugin = { id = "win7calc.main.gradle.plugin", version = "unspecified"}
+win7calc-main-app-gradle-plugin = { id = "win7calc.main.app.gradle.plugin", version = "unspecified"}
+win7calc-main-lib-gradle-plugin = { id = "win7calc.main.lib.gradle.plugin", version = "unspecified"}
