--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,9 @@
 [versions]
+app = "8.1.4"
 agp = "8.4.0"
 kotlin = "1.9.0"
+alp = "8.2.2"
+kapt = "1.9.24"
 coreKtx = "1.10.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -9,6 +12,15 @@ appcompat = "1.6.1"
 material = "1.10.0"
 activity = "1.8.0"
 constraintlayout = "2.1.4"
+
+applicationId = "ru.profitsw2000.win7calculator"
+compileSdk = "34"
+minSdk = "24"
+targetSdk = "34"
+versionCode = "1"
+versionName = "1.0"
+testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -20,7 +32,13 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 
+android-gradlePlugin = {group = "com.android.tools.build", name = "gradle", version.ref = "app"}
+kotlin-gradlePlugin = {group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin"}
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-
+android-library = { id = "com.android.library", version.ref = "alp"}
+kotlin-kapt = {id = "org.jetbrains.kotlin.kapt", version.ref = "kapt"}
+win7calc-main-app-gradle-plugin = { id = "win7calc.main.app.gradle.plugin", version = "unspecified"}
+win7calc-main-lib-gradle-plugin = { id = "win7calc.main.lib.gradle.plugin", version = "unspecified"}
